--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "vue-gtag": "^1.16.1"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.1",
